--- a/index.html
+++ b/index.html
@@ -131,6 +131,11 @@
               <p class="keteranganTxt">This photo was taken when i was competing in <span><u><b>postel 2022,</b></u></span> in my school. And i won again. <span><u><b>Naufal</b></u></span> took this photo</p>
             </div>
           </div>
+          <div class="winBox winBox3" data-aos="fade-up-right" data-aos-duration="3000">
+            <div class="keterangan keteranganWinBox3Wrapper">
+              <p class="keteranganTxt">This photo was taken when my friends and i <span><u><b>organize concepts for the independence day at my school</b></u></span>. <span><u><b>Alfi</b></u></span> took this photo</p>
+            </div>
+          </div>
         </div>
       </main>
     </div>
