--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
     <div class="achievement menu" id="achievement">
       <main>
         <div class="titleWrapper">
-          <h1 class="title" data-aos="fade-down" data-aos-duration="1000">Achievesment | <span>2021 - 2022</span></h1>
+          <h1 class="title" data-aos="fade-down" data-aos-duration="1000">Great things | <span>2021 - 2022</span></h1>
         </div>
         <div class="winWrapper">
           <div class="winBox winBox1" data-aos="fade-up-right" data-aos-duration="2000">
